added more content

--- a/hw01_gapminder.rmd
+++ b/hw01_gapminder.rmd
@@ -42,5 +42,6 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 ```{r}
 head(gapminder)
 tail(gapminder)
+str(gapminder)
 ```
 
