--- a/cm006-exercise.Rmd
+++ b/cm006-exercise.Rmd
@@ -90,21 +90,33 @@ Let's build a histogram of life expectancy.
 | Grammar Component     | Specification |
 |-----------------------|---------------|
 | __data__              | `gapminder` |
-| __aesthetic mapping__ |  |
-| __geometric object__  |  |
-| scale                 |  |
-| statistical transform |  |
+| __aesthetic mapping__ | `x` |
+| __geometric object__  | histogram |
+| scale                 | linear |
+| statistical transform | none |
 
 2. Build the histogram of life expectancy.
 
+```{r}
+ggplot(gapminder, aes(lifeExp)) +
+  geom_histogram()
+```
 
 
 3. Change the number of bins to 50.
 
+```{r}
+ggplot(gapminder, aes(lifeExp)) +
+  geom_histogram(bins = 50)
+```
 
 
 4. Instead of a histogram, let's create a kernel density plot.
 
+```{r}
+ggplot(gapminder, aes(lifeExp)) +
+  geom_density()
+```
 
 
 5. Optional: git stage and commit
@@ -121,21 +133,32 @@ Let's make _box plots_ of population for each continent. Note: y-axis is much be
 | Grammar Component     | Specification |
 |-----------------------|---------------|
 | __data__              | `gapminder` |
-| __aesthetic mapping__ |  |
-| __geometric object__  |  |
-| scale                 |  |
-| statistical transform |  |
+| __aesthetic mapping__ | `x` and `y` |
+| __geometric object__  | boxplot |
+| scale                 | log-y |
+| statistical transform | 5-number summary |
 
 2. Initiate the `ggplot` call, with the log y scale, and store it in the variable `a`. Print out `a`.
 
+```{r}
+a <- ggplot(gapminder, aes(continent, pop)) + 
+  scale_y_log10()
+a
+```
 
 
 3. Add the boxplot geom to `a`.
+```{r}
+a + geom_boxplot()
+```
 
 
 
 4. A violin plot is a kernel density on its side, made symmetric. Add that geom to `a`.
     - What's better here, boxplots or violin plots? Why?
+```{r}
+a + geom_violin()
+```
 
 5. Optional: git stage and commit
 
@@ -149,6 +172,9 @@ Let's hold off on identifying the grammar.
 
 1. Initiate the `ggplot` call to make a scatterplot of `continent` vs `pop`; initiate the log y scale. Store the call in the variable `b`.
 
+```{r}
+a + geom_point(alpha=0.1)
+```
 
 
 2. Add the point geom to `b`. Why is this an ineffective plot?
@@ -157,6 +183,9 @@ Let's hold off on identifying the grammar.
 
 3. A solution is to jitter the points. Add the jitter geom. Re-run the command a few times -- does the plot change? Why?
 
+```{r}
+a + geom_jitter(alpha=0.25)
+```
 
 
 4. How does the grammar differ from a box plot or violin plot?
@@ -164,6 +193,10 @@ Let's hold off on identifying the grammar.
 
 5. We can add multiple geom _layers_ to our plot. Put a jitterplot overtop of the violin plot, starting with our base `b`. Try vice-versa. 
 
+```{r}
+a + geom_violin() +
+  geom_jitter(alpha=0.1)
+```
 
 
 6. Optional: git stage and commit
