--- a/cm006-exercise.Rmd
+++ b/cm006-exercise.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "cm006 Exercises: Exploring Geometric Objects"
-output: git_document
+output: github_document
 
 ---
 
@@ -48,8 +48,7 @@ Notice the "metaprogramming" again!
 4. You _must_ remember to put the aesthetic mappings in the `aes` function! What happens if you forget?
 
 ```{r}
-ggplot(gapminder, x=lifeExp, y=gdpPercap) +
-  geom_point
+
 ```
 
 
@@ -223,10 +222,22 @@ Let's make some time/line plot, starting with Canada's life expectancy over time
     3. Makes the time plot of `lifeExp` over time
     4. Also displays the points
 
+```{r}
+gapminder %>% 
+  filter(country == "Canada") %>% 
+  ggplot(aes(year, lifeExp)) + 
+  geom_line() +
+  geom_point()
+```
 
 
 3. Attempt to overlay line plots for all countries. That is, repeat the above code, but don't filter. What's wrong here?
 
+```{r}
+c <- ggplot(gapminder, aes(year, lifeExp))
+c + geom_line()
+c + geom_line(aes(group=country), alpha=0.2)
+```
 
 
 4. Use the `group` aesthetic to fix the problem.
