updated exercise and exercise files

--- a/cm007/cm007-exercise.Rmd
+++ b/cm007/cm007-exercise.Rmd
@@ -106,6 +106,13 @@ gsvl + geom_point(aes(size = pop, fill=continent), shape=21, colour="black", alp
 ```
 
 
+```{r}
+gsvl + geom_point(aes(size=pop, colour=continent)) + 
+  scale_size_area() +
+  facet_wrap(~ year)
+```
+
+
 # Continue from last time (geom exploration with `x` and `y` aesthetics)
 
 ## Path plots
@@ -122,6 +129,16 @@ gsvl + geom_point(aes(size=pop, colour=continent)) +
 ```
 
 
+
+```{r}
+gapminder %>% 
+  filter(country == "Rwanda") %>% 
+  arrange(year) %>% 
+  ggplot(aes(gdpPercap, lifeExp)) +
+  geom_point() +
+  geom_path(arrow=arrow())
+```
+
 ## Two categorical variables
 
 Try `cyl` (number of cylinders) ~ `am` (transmission) in the `mtcars` data frame.
@@ -129,6 +146,10 @@ Try `cyl` (number of cylinders) ~ `am` (transmission) in the `mtcars` data frame
 - Scatterplot? Jitterplot? No.
 - `geom_count()`.
 - `geom_bin2d()`. Compare with `geom_tile()` with `fill` aes.
+```{r}
+ggplot(mtcars, aes(factor(cyl),factor(am))) +
+  geom_bin2d()
+```
 
 ## Overplotting
 
@@ -138,6 +159,14 @@ Try a scatterplot with:
 - `geom_hex()`
 - `geom_density2d()`
 - `geom_smooth()`
+```{r}
+gsvl + geom_hex()
+
+gsvl + geom_density2d()
+gsvl + geom_smooth() +
+  geom_point(alpha=0.1)
+gsvl + geom_point(alpha=0.1) + geom_smooth()
+```
 
 
 ## Bar plots
@@ -146,6 +175,12 @@ How many countries are in each continent? Use the year 2007.
 
 1. After filtering the gapminder data to 2007, make a bar chart of the number of countries in each continent. Store everything except the geom in the variable `d`.
 
+```{r}
+gapminder %>% 
+  filter(year == 2007) %>% 
+  ggplot(aes(x=continent)) +
+  geom_bar()
+```
 
 
 2. Notice the y-axis. Oddly, `ggplot2` doesn't make it obvious how to change to proportion. Try adding a `y` aesthetic: `y=..count../sum(..count..)`.
@@ -159,6 +194,9 @@ __Uses of bar plots__: Get a sense of relative quantities of categories, or see 
 ## Polar coordinates
 
 - Add `coord_polar()` to a scatterplot.
+```{r}
+gsvl + geom_point() + coord_polar()
+```
 
 
 # Want more practice?
@@ -166,6 +204,13 @@ __Uses of bar plots__: Get a sense of relative quantities of categories, or see 
 If you'd like some practice, give these exercises a try
 
 __Exercise 1__: Make a plot of `year` (x) vs `lifeExp` (y), with points coloured by continent. Then, to that same plot, fit a straight regression line to each continent, without the error bars. If you can, try piping the data frame into the `ggplot` function.
+
+```{r}
+ggplot(gapminder, aes(year, lifeExp)) + 
+  geom_point(aes(colour=continent))
+ 
+```
+
 
 __Exercise 2__: Repeat Exercise 1, but switch the _regression line_ and _geom\_point_ layers. How is this plot different from that of Exercise 1?
 
